# MonitorBuddy

./: .gitignore  README.md  install.ps1  publish.ps1
MonitorSwitchUI/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MonitorConfig.cs  MonitorSwitch.csproj  Program.cs  app.manifest
NativeDLL/: CMakeLists.txt  GestionEcrans.cpp  GestionEcrans.h
assets/: monitorbuddy_icone2.paint
